@@ -10,7 +10,8 @@ Changelog
  * Fix: Rich text editor is no longer broken in settings (Matt Westcott)
  * Fix: Link tooltip now shows correct urls for newly inserted document links (Matt Westcott)
  * Fix: Now page chooser (in a rich text editor) opens up at the link's parent page, rather than at the page itself (Matt Westcott)
-
+ * Fix: Reverted fix for explorer menu scrolling with page content, as it blocked access to menus that exceed screen height
+ 
 
 1.5 (31.05.2016)
 ~~~~~~~~~~~~~~~~
